@@ -1401,6 +1401,14 @@ sim_set_callbacks (p)
   cr16_callback = p;
 }
 
+int
+sim_trace (SIM_DESC sd)
+{
+  sim_resume (sd, 0, 0);
+
+  return 1;
+}
+
 void
 sim_stop_reason (sd, reason, sigrc)
      SIM_DESC sd;
